--- a/index.html
+++ b/index.html
@@ -5,8 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hw#7</title>
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <div class="desktop">
+        <div class="first__screen">
+            <nav>
+                <a class="nav__link" href="#">ГЛАВНАЯ</a>
+                <a class="nav__links" href="#">ОБ АВТОРЕ</a>
+                <a class="nav__links" href="#">РАБОТЫ</a>
+                <a class="nav__links" href="#">ПРОЦЕСС</a>
+                <a class="nav__links" href="#">КОНТАКТЫ</a>
+            </nav>
+            <h1 class="title">Дизайн и верстка</h1>
+            <p class="text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+            <button class="hdr__btn">НАПИСАТЬ МНЕ</button>
+        </div>
+        <h2 class="caption">Обо мне</h2>
+        <p class="sbttl">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+        <div class="about__me">
+
+        </div>
+        <div class="footer">
+
+        </div>
+        <div class="video">
+
+        </div>
+        <div class="numbers">
+
+        </div>
+    </div>
     
 </body>
 </html>
