--- a/index.html
+++ b/index.html
@@ -11,21 +11,20 @@
 <body>
     <div class="desktop">
         <div class="first__screen">
-            <nav>
-                <a class="nav__link" href="#">ГЛАВНАЯ</a>
-                <a class="nav__links" href="#">ОБ АВТОРЕ</a>
-                <a class="nav__links" href="#">РАБОТЫ</a>
-                <a class="nav__links" href="#">ПРОЦЕСС</a>
-                <a class="nav__links" href="#">КОНТАКТЫ</a>
+            <nav class="nav">
+                <a class="nav__link" id="home" href="#">ГЛАВНАЯ</a>
+                <a class="nav__link" href="#">ОБ АВТОРЕ</a>
+                <a class="nav__link" href="#">РАБОТЫ</a>
+                <a class="nav__link" href="#">ПРОЦЕСС</a>
+                <a class="nav__link" href="#">КОНТАКТЫ</a>
             </nav>
             <h1 class="title">Дизайн и верстка</h1>
             <p class="text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
             <button class="hdr__btn">НАПИСАТЬ МНЕ</button>
         </div>
+        <div class="about__me">
         <h2 class="caption">Обо мне</h2>
         <p class="sbttl">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
-        <div class="about__me">
-
         </div>
         <div class="footer">
 
