--- a/index.html
+++ b/index.html
@@ -26,13 +26,68 @@
         <h2 class="caption">Обо мне</h2>
         <p class="sbttl">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
         </div>
-        <div class="footer">
+        <div class="numbers">
+            <div class="card">
+                <div class="img">
+                    <img src="./img/pic01.png" alt="pic01">
+                </div>                
+                <div class="blok">
+                    <h3 class="amount">40+</h3>
+                    <p class="unit">проектов</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="img">
+                    <img src="./img/pic01.png" alt="pic01">
+                </div>                
+                <div class="blok">
+                    <h3 class="amount">40+</h3>
+                    <p class="unit">проектов</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="img">
+                    <img src="./img/pic01.png" alt="pic01">
+                </div>                
+                <div class="blok">
+                    <h3 class="amount">40+</h3>
+                    <p class="unit">проектов</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="img">
+                    <img src="./img/pic01.png" alt="pic01">
+                </div>                
+                <div class="blok">
+                    <h3 class="amount">40+</h3>
+                    <p class="unit">проектов</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="img">
+                    <img src="./img/pic01.png" alt="pic01">
+                </div>                
+                <div class="blok">
+                    <h3 class="amount">40+</h3>
+                    <p class="unit">проектов</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="img">
+                    <img src="./img/pic01.png" alt="pic01">
+                </div>                
+                <div class="blok">
+                    <h3 class="amount">40+</h3>
+                    <p class="unit">проектов</p>
+                </div>
+            </div>
 
         </div>
         <div class="video">
 
         </div>
-        <div class="numbers">
+
+        <div class="footer">
 
         </div>
     </div>
