--- a/index.html
+++ b/index.html
@@ -81,10 +81,12 @@
                     <p class="unit">проектов</p>
                 </div>
             </div>
-
         </div>
         <div class="video">
-
+            <h2 class="subject">Как я работаю</h2>
+            <p class="tagline">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+            <img class="pic" src="./img/pic02.png" alt="video">
+            
         </div>
 
         <div class="footer">
