--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@
         </div>
 
         <div class="footer">
-
+        <div class="footer__block">
+            <h3 class="name">Иванов Иван</h3>
+            <p class="copy">&copy; 2018. Все права защищены.</p>
+        </div>
         </div>
     </div>
     
