--- a/index.html
+++ b/index.html
@@ -10,92 +10,104 @@
 </head>
 <body>
     <div class="desktop">
-        <div class="first__screen">
-            <nav class="nav">
-                <a class="nav__link" id="home" href="#">ГЛАВНАЯ</a>
-                <a class="nav__link" href="#">ОБ АВТОРЕ</a>
-                <a class="nav__link" href="#">РАБОТЫ</a>
-                <a class="nav__link" href="#">ПРОЦЕСС</a>
-                <a class="nav__link" href="#">КОНТАКТЫ</a>
-            </nav>
-            <h1 class="title">Дизайн и верстка</h1>
-            <p class="text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
-            <button class="hdr__btn">НАПИСАТЬ МНЕ</button>
+
+        <div class="blok__fs">
+            <div class="blok__fs__content">
+                <div class="first__screen">
+                    <nav class="nav">
+                        <a class="nav__link" id="home" href="#">ГЛАВНАЯ</a>
+                        <a class="nav__link" href="#">ОБ АВТОРЕ</a>
+                        <a class="nav__link" href="#">РАБОТЫ</a>
+                        <a class="nav__link" href="#">ПРОЦЕСС</a>
+                        <a class="nav__link" href="#">КОНТАКТЫ</a>
+                    </nav>
+                    <h1 class="title">Дизайн и верстка</h1>
+                    <p class="text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+                    <button class="hdr__btn">НАПИСАТЬ МНЕ</button>
+                </div>
+            </div>
         </div>
+
         <div class="about__me">
-        <h2 class="caption">Обо мне</h2>
-        <p class="sbttl">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+            <h2 class="caption">Обо мне</h2>
+            <p class="sbttl">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
         </div>
-        <div class="numbers">
-            <div class="card">
-                <div class="img">
-                    <img src="./img/pic01.png" alt="pic01">
+
+        <div class="blok__numbers">
+            <div class="blok__numbers__content">
+                <div class="numbers">
+                    <div class="card">
+                        <div class="img">
+                            <img src="./img/pic01.png" alt="pic01">
+                        </div>                
+                    <div class="blok">
+                        <h3 class="amount">40+</h3>
+                        <p class="unit">проектов</p>
+                    </div>
+                    </div>
+                    <div class="card">
+                        <div class="img">
+                            <img src="./img/pic01.png" alt="pic01">
+                        </div>                
+                        <div class="blok">
+                            <h3 class="amount">40+</h3>
+                            <p class="unit">проектов</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="img">
+                            <img src="./img/pic01.png" alt="pic01">
+                        </div>                
+                        <div class="blok">
+                            <h3 class="amount">40+</h3>
+                            <p class="unit">проектов</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="img">
+                            <img src="./img/pic01.png" alt="pic01">
+                        </div>                
+                        <div class="blok">
+                            <h3 class="amount">40+</h3>
+                            <p class="unit">проектов</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="img">
+                            <img src="./img/pic01.png" alt="pic01">
+                        </div>                
+                        <div class="blok">
+                            <h3 class="amount">40+</h3>
+                            <p class="unit">проектов</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="img">
+                            <img src="./img/pic01.png" alt="pic01">
+                        </div>                
+                        <div class="blok">
+                            <h3 class="amount">40+</h3>
+                            <p class="unit">проектов</p>
+                        </div>
+                    </div>
                 </div>                
-                <div class="blok">
-                    <h3 class="amount">40+</h3>
-                    <p class="unit">проектов</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="img">
-                    <img src="./img/pic01.png" alt="pic01">
-                </div>                
-                <div class="blok">
-                    <h3 class="amount">40+</h3>
-                    <p class="unit">проектов</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="img">
-                    <img src="./img/pic01.png" alt="pic01">
-                </div>                
-                <div class="blok">
-                    <h3 class="amount">40+</h3>
-                    <p class="unit">проектов</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="img">
-                    <img src="./img/pic01.png" alt="pic01">
-                </div>                
-                <div class="blok">
-                    <h3 class="amount">40+</h3>
-                    <p class="unit">проектов</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="img">
-                    <img src="./img/pic01.png" alt="pic01">
-                </div>                
-                <div class="blok">
-                    <h3 class="amount">40+</h3>
-                    <p class="unit">проектов</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="img">
-                    <img src="./img/pic01.png" alt="pic01">
-                </div>                
-                <div class="blok">
-                    <h3 class="amount">40+</h3>
-                    <p class="unit">проектов</p>
-                </div>
             </div>
         </div>
+
         <div class="video">
             <h2 class="subject">Как я работаю</h2>
             <p class="tagline">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
             <img class="pic" src="./img/pic02.png" alt="video">
-            
         </div>
 
         <div class="footer">
-        <div class="footer__block">
-            <h3 class="name">Иванов Иван</h3>
-            <p class="copy">&copy; 2018. Все права защищены.</p>
+            <div class="footer__block">
+                <div class="footer__block__content">
+                    <h3 class="name">Иванов Иван</h3>
+                    <p class="copy">&copy; 2018. Все права защищены.</p>
+                </div>
+            </div>
         </div>
-        </div>
-    </div>
     
 </body>
 </html>
