--- a/index.html
+++ b/index.html
@@ -71,11 +71,19 @@
             </div>           
         </div>
     </div>
-    <div class="video">
-        <h2 class="subject">Как я работаю</h2>
-        <p class="texts tagline">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
-        <img src="./img/pic02.png" alt="video">
-    </div>
+        <div class="video">
+            <h2 class="subject">Как я работаю</h2>
+            <p class="texts tagline">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+            <div class="background-image">
+                <div class="padding-top">
+                    <div class="play__button">
+                        <a href="./img/video.png" target="_blank">
+                            <img src="./img/play-button.png" alt="play-button">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
     <div class="footer">
         <div class="footer__content">
             <h3 class="name">Иванов Иван</h3>
